<resources>
    <string name="app_name">LiteReader</string>
    <string name="app_description">轻量阅读，厚积薄发。</string>
    <string name="click_again_exit_app">再次点击返回键退出应用</string>

    <!--订阅频道-->
    <string name="subscribe_channel">订阅频道</string>
    <string name="please_select_at_least_one_channel">请至少选择一个频道</string>
    <string name="long_press_and_drag_to_arrange_the_order">长按并拖动可以对频道进行排序</string>
    <string name="save">保存</string>

    <!--我的收藏-->
    <string name="my_collection">我的收藏</string>
    <string name="collect_ing">正在加入我的收藏…</string>
    <string name="collect_success">成功加入我的收藏</string>
    <string name="remove_from_my_collection">成功移出我的收藏</string>
    <string name="getting_collection">正在获取我的收藏</string>
    <string name="pubdate"><![CDATA[上映时间: %1s]]></string>
    <string name="douban_rating"><![CDATA[豆瓣评分: %1s/10]]></string>

    <!--设置-->
    <string name="setting">设置</string>
    <string name="general">常规</string>
    <string name="other">其他</string>
    <string name="feedback">反馈</string>
    <string name="show_daily_wallpaper_every_time">每次启动均显示每日壁纸</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clearing_cache">正在清除缓存…</string>
    <string name="clear_cache_success">成功删除缓存</string>
    <string name="check_for_update">检查更新</string>
    <string name="auto_check_for_update">自动检查更新</string>
    <string name="current_version"><![CDATA[当前版本: %1s]]></string>
    <string name="welcome_to_feedback_on_github_issue">欢迎在 Github 的 Issue 上提出反馈</string>

    <!--关于我-->
    <string name="about_me">关于我</string>
    <string name="version">版本</string>

    <string name="loading">正在加载…</string>
    <string name="load_fail">加载失败</string>
    <string name="deleting">正在删除</string>

    <!--知乎日报-->
    <string name="column_zhihu_daily">知乎日报</string>
    <string name="latest_daily">最新日报</string>
    <string name="special_section">专栏</string>
    <string name="home">首页</string>

    <!--每日散文-->
    <string name="column_daily_article">每日散文</string>

    <!--ONE影评-->
    <string name="column_one_review">ONE影评</string>

    <!--ONE文章-->
    <string name="column_one_article">ONE文章</string>

    <!--豆瓣图书-->
    <string name="column_douban_book">豆瓣图书</string>

    <!--豆瓣电影-->
    <string name="column_douban_movie">豆瓣电影</string>
    <string name="douban_checkout_movie_detail">查看电影详情</string>
    <string name="douban_movie_detail_introduce">简介</string>
    <string name="douban_staff_no_introduce">该影人暂无简介</string>
    <string name="douban_staff_english_name"><![CDATA[英文名: %1s]]></string>
    <string name="douban_staff_born_place"><![CDATA[出生地: %1s]]></string>
    <string name="douban_staff_work">影人作品</string>
    <string name="douban_movie_detail_more_stills">更多\n剧照</string>
    <string name="douban_movie_detail_more_reviews">查看更多影评</string>
    <string name="douban_review_list">影评列表</string>
    <string name="douban_movie_review">长影评</string>
    <string name="douban_movie_comment">短影评</string>
    <string name="douban_movie_search">搜索电影</string>

    <!--顶部菜单-->
    <string name="menu_share">分享</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_discollect">取消收藏</string>
    <string name="menu_more">更多</string>

    <!--分享-->
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="weibo">微博</string>
    <string name="cancel">取消</string>

</resources>
