<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="io.mindjet.litereader.ui.dialog.ShareDialog" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/common_gap_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_corner_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/common_gap_small"
                android:paddingTop="@dimen/common_gap"
                android:text="@string/menu_share"
                android:textSize="@dimen/common_text_size" />

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_borderless_default"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="@{() -> data.onWechat()}"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/common_gap"
                    android:paddingTop="@dimen/common_gap"
                    app:layout_widthPercent="22%w">

                    <ImageView
                        android:layout_width="@dimen/share_icon_size"
                        android:layout_height="@dimen/share_icon_size"
                        android:src="@drawable/ic_wechat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_gap_small"
                        android:singleLine="true"
                        android:text="@string/wechat" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_borderless_default"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="@{() -> data.onQQ()}"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/common_gap"
                    android:paddingTop="@dimen/common_gap"
                    app:layout_widthPercent="22%w">

                    <ImageView
                        android:layout_width="@dimen/share_icon_size"
                        android:layout_height="@dimen/share_icon_size"
                        android:src="@drawable/ic_qq" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_gap_small"
                        android:singleLine="true"
                        android:text="@string/qq" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_borderless_default"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="@{() -> data.onQzone()}"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/common_gap"
                    android:paddingTop="@dimen/common_gap"
                    app:layout_widthPercent="22%w">

                    <ImageView
                        android:layout_width="@dimen/share_icon_size"
                        android:layout_height="@dimen/share_icon_size"
                        android:src="@drawable/ic_qzone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_gap_small"
                        android:singleLine="true"
                        android:text="@string/qzone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_borderless_default"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="@{() -> data.onWeibo()}"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/common_gap"
                    android:paddingTop="@dimen/common_gap"
                    app:layout_widthPercent="22%w">

                    <ImageView
                        android:layout_width="@dimen/share_icon_size"
                        android:layout_height="@dimen/share_icon_size"
                        android:src="@drawable/ic_weibo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_gap_small"
                        android:singleLine="true"
                        android:text="@string/weibo" />

                </LinearLayout>

            </com.zhy.android.percent.support.PercentLinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_default"
                android:clickable="true"
                android:gravity="center"
                android:onClick="@{() -> data.onCancel()}"
                android:padding="@dimen/common_gap"
                android:text="@string/cancel"
                android:textSize="@dimen/common_text_size" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</layout>